--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "authors": [
         {
             "name": "Webtrend",
-            "homepage": "http://"
+            "homepage": "https://google.com"
         }
     ],
     "require": {
