--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "webtrend/cookie-set",
-    "description": "A plugin that stores Google Analytics utm_parameter query string to a client cookie.",
+    "description": "A plugin that stores Google Analytics utm_parameter query string to a client cookies.",
     "type": "craft-plugin",
     "version": "1.0.0",
     "keywords": [
