--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "webtrend/cookie-set",
     "description": "A plugin that stores Google Analytics utm_parameter query string to a client cookies",
     "type": "craft-plugin",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "keywords": [
         "craft",
         "cms",
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^3.0.0-RC1"
+        "craftcms/cms": "^3.0.0"
     },
     "autoload": {
         "psr-4": {
