--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^3.0 || ^4.0"
+        "craftcms/cms": "^4.0"
     },
     "autoload": {
         "psr-4": {
